--- a/home.css
+++ b/home.css
@@ -6,6 +6,8 @@
 
                                             /* hero section style  */
 
+
+
 .hero-section {
     background-color: #f0f0f0; 
     padding: 80px 20px;
@@ -25,12 +27,12 @@
 }
 
 .navbar {
-    background-color: white;
+    background-color: #f0f0f0;
     padding: 10px 0;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); 
+    /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);  */
     position: absolute;
     top: 15px;
-    left: 50%;
+    left: 70%;
     transform: translateX(-50%);
     width: 50%; 
     border-radius: 5px; 
@@ -50,6 +52,7 @@
 .navbar ul li {
     display: inline;
     margin: 0 15px;
+    font-size: 20px;
 }
 
 .navbar ul li a {
@@ -74,12 +77,14 @@
     margin: 0;
     font-size: 2.5em;
     color: #333;
+ 
 }
 
 .hero-content p {
     font-size: 1.2em;
     color: #666;
     margin: 10px 0;
+
 }
 
 .search-bar {
