--- a/home.css
+++ b/home.css
@@ -7,12 +7,12 @@
                                             /* hero section style  */
 
 
-
 .hero-section {
     background-color: #f0f0f0; 
     padding: 80px 20px;
     position: relative;
     margin: auto;
+    
 }
 
 .logo {
@@ -27,12 +27,12 @@
 }
 
 .navbar {
-    background-color: #f0f0f0;
+    background-color: lightblue;
     padding: 10px 0;
-    /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);  */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); 
     position: absolute;
-    top: 15px;
-    left: 70%;
+   
+    left: 50%;
     transform: translateX(-50%);
     width: 50%; 
     border-radius: 5px; 
@@ -217,7 +217,7 @@
 .image{
     width: 287px;
     height: 250px;
-    border-radius: 10%;
+    
 } 
 .package-section h2{
     text-align: center;
