--- a/Bus/bus.css
+++ b/Bus/bus.css
@@ -1,9 +1,41 @@
 .home_back{ 
   height: 100vh; 
   width: 100%; 
-  background-image: url(https://content.jdmagicbox.com/comp/def_content/bus_on_hire/default-bus-on-hire-6.jpg); 
+  background-image: url(image/image.jfif); 
   background-repeat: no-repeat; 
   background-size: cover; 
+}
+.button-container { 
+  display: flex; 
+  background-color: rgba(135, 206, 235); 
+  width: 100%; 
+  height: 50px; 
+  align-items: center; 
+  justify-content: space-around; 
+  border-radius: 10px; 
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px, 
+        rgba(135, 206, 235, 0.5) 5px 10px 15px; 
+} 
+ 
+.button { 
+  outline: 0 !important; 
+  border: 0 !important; 
+  width: 60px; 
+  height: 60px; 
+  border-radius: 50%; 
+  margin-left: 1550%; 
+  background-color: transparent; 
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  color: #fff; 
+  transition: all ease-in-out 0.3s; 
+  cursor: pointer; 
+  font-family: "Fira Sans", sans-serif; 
+} 
+ 
+.button:hover { 
+  transform: translateY(-5px); 
 }
 .menu-box{ 
   width: 600px; 
@@ -13,9 +45,9 @@
   float: right; 
   text-align: center; 
   position: absolute; 
-  top:50%; 
-  left: 50%; 
-  transform: translate(-50%,-50%); 
+  top:100%; 
+  left: 100%; 
+  transform: translate(-105%,-135%); 
   box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px; 
 } 
 .btn-box{ 
@@ -319,9 +351,9 @@ inset: 0;
   height: 60%; 
   width: 80%; 
   /* border: 1px solid black; */ 
-  margin-top: 20%; 
+  margin-top: +60%; 
   margin-left: 10%; 
-  margin-bottom: 10%; 
+  margin-bottom: -35%; 
   border-radius: 20px; 
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px; 
   background-color: #bde0fe; 
@@ -395,7 +427,7 @@ inset: 0;
   flex-wrap: wrap; 
 } 
  
-.social-icon__item, 
+.social-icon__item,
 .menu__item { 
   list-style: none; 
 } 
@@ -455,7 +487,7 @@ inset: 0;
   z-index: 999; 
   opacity: 0.5; 
   bottom: 10px; 
-  animation: animate 4s linear infinite !important; 
+  animation: animate 4s linear infinite !important;
 } 
  
 .wave#wave3 { 
@@ -489,91 +521,494 @@ inset: 0;
     background-positon-x: 0px; 
   } 
 }
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); 
- 
- 
-.ffbox { 
-    display: flex; 
-    width: 80%; 
-    max-width: 800px; 
-    background-color: #fff; 
-    border: 3px solid #e4e4e9; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-    overflow: hidden; 
-    border-radius: 10px; 
-    flex-wrap: wrap; 
-    /*margin-left: 30%;*/
-    margin-right:-30%; 
-    margin-bottom: 10%; 
-     
+
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+/* Pretty Stuff */
+.contact-form-container {
+  background: #F4F3F3;
+  font-family: 'Lato', sans-serif;
+margin-top: 50%; 
+}
+
+.contact-us {
+  position: relative;
+  width: 250px;
+  background: #C3E0EC;
+  overflow: hidden; }
+  .contact-us:before {
+    position: absolute;
+    content: "";
+    bottom: -50px;
+    left: -100px;
+    height: 250px;
+    width: 400px;
+    background: #F8B7D8;
+    transform: rotate(25deg); }
+  .contact-us:after {
+    position: absolute;
+    content: "";
+    bottom: -80px;
+    right: -100px;
+    height: 270px;
+    width: 400px;
+    background: #9ED8EB;
+    transform: rotate(-25deg); }
+
+.contact-header {
+  color: white;
+  position: absolute;
+  transform: rotate(-90deg);
+  top: 120px;
+  left: -40px; }
+  .contact-header h1 {
+    font-size: 1.5rem; }
+
+.social-bar {
+  position: absolute;
+  bottom: 20px;
+  left: 75px;
+  z-index: 1;
+  width: 100px; }
+  .social-bar ul {
+    list-style-type: none; }
+    .social-bar ul li {
+      display: inline-block;
+      color: white;
+      width: 25px;
+      height: 25px;
+      line-height: 25px;
+      text-align: center;
+      margin-right: -4px;
+      font-size: 1.2rem; }
+
+.header {
+  text-align: center;
+  padding: 20px 0;
+  color: #444; }
+  .header h1 {
+    font-weight: normal; }
+  .header h2 {
+    margin-top: 10px;
+    font-weight: 300; }
+
+.address, .email, .phone {
+  text-align: center;
+  padding: 20px 0;
+  color: #444; }
+  .address h3, .email h3, .phone h3 {
+    font-size: 1rem;
+    font-weight: 300; }
+  .address i, .email i, .phone i {
+    color: #F8B7D8;
+    font-size: 1.7rem;
+    margin-bottom: 20px; }
+
+form {
+  position: relative;
+  width: 440px;
+  margin: 0 auto;
+  padding: 20px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  background: white; }
+  form input, form textarea {
+    background: white;
+    display: block;
+    margin: 20px auto;
+    width: 100%;
+    border: 0; }
+  form input {
+    height: 40px;
+    line-height: 40px;
+    outline: 0;
+    border-bottom: 1px solid rgba(68, 68, 68, 0.3);
+    font-size: 1rem;
+    color: rgba(68, 68, 68, 0.8); }
+  form textarea {
+    border-bottom: 1px solid rgba(68, 68, 68, 0.3);
+    resize: none;
+    outline: none;
+    font-size: 1rem;
+    font-family: lato;
+    color: rgba(68, 68, 68, 0.8); }
+  form button {
+    position: absolute;
+    display: block;
+    height: 40px;
+    width: 250px;
+    left: 95px;
+    border: 0;
+    border-radius: 20px;
+    bottom: -20px;
+    background: #9ED8EB;
+    color: white;
+    font-size: 1.1rem;
+    font-weight: 300;
+    outline: none; }
+
+.contact-form {
+  padding-bottom: 40px; }
+
+/* Layout Stuff */
+/* body {
+  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/38816/image-from-rawpixel-id-2042508-jpeg.jpg");
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: grid;
+  justify-items: center;
+  align-items: center; } */
+
+.contact-form-container {
+  width: 800px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 0.5fr 0.5fr 2fr;
+  grid-template-areas: "contact-us header header header" "contact-us address phone email" "contact-us contact-form contact-form contact-form"; 
+  margin-left: 25vw;
+  margin-bottom: 20vh;
+}
+
+.contact-us {
+  grid-area: contact-us; }
+
+.header {
+  grid-area: header; }
+
+.address {
+  grid-area: address; }
+
+.phone {
+  grid-area: phone; }
+
+.email {
+  grid-area: email; }
+
+.contact-form {
+  grid-area: contact-form; }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+.footer {
+  position: relative;
+  width: 100%;
+  background: #3586ff;
+  min-height: 100px;
+  padding: 20px 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.social-icon,
+.menu {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+  flex-wrap: wrap;
+}
+
+.social-icon__item,
+.menu__item {
+  list-style: none;
+}
+
+.social-icon__link {
+  font-size: 2rem;
+  color: #fff;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+}
+.social-icon__link:hover {
+  transform: translateY(-10px);
+  color: #ff69eb;
+}
+
+.menu__link {
+  font-size: 1.2rem;
+  color: #fff;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+  text-decoration: none;
+  opacity: 0.75;
+  font-weight: 300;
+}
+
+.menu__link:hover {
+  opacity: 1;
+}
+
+.footer p {
+  color: #fff;
+  margin: 15px 0 10px 0;
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.wave {
+  position: absolute;
+  top: -100px;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: url("https://i.ibb.co/wQZVxxk/wave.png");
+  background-size: 1000px 100px;
+}
+
+.wave#wave1 {
+  z-index: 1000;
+  opacity: 1;
+  bottom: 0;
+  animation: animateWaves 4s linear infinite;
+}
+
+.wave#wave2 {
+  z-index: 999;
+  opacity: 0.5;
+  bottom: 10px;
+  animation: animate 4s linear infinite !important;
+}
+
+.wave#wave3 {
+  z-index: 1000;
+  opacity: 0.2;
+  bottom: 15px;
+  animation: animateWaves 3s linear infinite;
+}
+
+.wave#wave4 {
+  z-index: 999;
+  opacity: 0.7;
+  bottom: 20px;
+  animation: animate 3s linear infinite;
+}
+
+@keyframes animateWaves {
+  0% {
+    background-position-x: 1000px;
+  }
+  100% {
+    background-positon-x: 0px;
+  }
+}
+
+@keyframes animate {
+  0% {
+    background-position-x: -1000px;
+  }
+  100% {
+    background-positon-x: 0px;
+  }
+}
+@import url('https://fonts.googleapis.com/css?family=Cardo:400i|Rubik:400,700&display=swap'); 
+ :root { 
+  --d: 700ms; 
+  --e: cubic-bezier(0.19, 1, 0.22, 1); 
+  --font-sans: 'Rubik', sans-serif; 
+  --font-serif: 'Cardo', serif; 
 } 
+ * { 
+  box-sizing: border-box; 
+} */ 
  
-.ffbox1 { 
-    flex: 1; 
-    padding: 20px; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+ .page-content { 
+  display: grid; 
+  grid-gap: 1rem; 
+  padding: 1rem; 
+  max-width: 1024px; 
+  margin: 0 auto; 
+  font-family: var(--font-sans); 
 } 
- 
-.ffbox1 label { 
-    display: block; 
-    margin-bottom: 8px; 
+ @media (min-width: 600px) { 
+  .page-content { 
+   grid-template-columns: repeat(2, 1fr); 
+ } 
 } 
- 
-.ffbox1 input, 
-.ffbox1 textarea { 
-    width: 100%; 
-    padding: 8px; 
-    margin-bottom: 16px; 
-    box-sizing: border-box; 
-    border-radius: 15px; 
-    background-color: #dcdce1; 
-    border: none; 
+ @media (min-width: 800px) { 
+  .page-content { 
+   grid-template-columns: repeat(4, 1fr); 
+ } 
 } 
- 
-.ffbox1 textarea { 
-    resize: vertical; 
+ .photo { 
+ float: left; 
+ margin-left: 4.2%; 
+ /* margin-right: -2%; */ 
+ margin-bottom: 3%; 
+  position: relative; 
+  display: flex; 
+  align-items: flex-end; 
+  overflow: hidden; 
+  padding: 1rem; 
+  width: 20%; 
+  border-radius: 20px; 
+  text-align: center; 
+  color: whitesmoke; 
+  background-color: whitesmoke; 
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1); 
 } 
- 
-.ffbox1 { 
-    margin-bottom: 16px; 
+ @media (min-width: 600px) { 
+  .photo { 
+   height: 350px; 
+ } 
 } 
+ .photo:before { 
+  content: ''; 
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 110%; 
+  background-size: cover; 
+  background-position: 0 0; 
+  transition: transform calc(var(--d) * 1.5) var(--e); 
+  pointer-events: none; 
  
-.ffbox1 label { 
-    margin-right: 16px; 
 } 
- 
-.map-div { 
-    flex: 1; 
-    background-color: #eee; 
+ .photo:after { 
+  content: ''; 
+  display: block; 
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 200%; 
+  pointer-events: none; 
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.009) 11.7%, rgba(0, 0, 0, 0.034) 22.1%, rgba(0, 0, 0, 0.072) 31.2%, rgba(0, 0, 0, 0.123) 39.4%, rgba(0, 0, 0, 0.182) 46.6%, rgba(0, 0, 0, 0.249) 53.1%, rgba(0, 0, 0, 0.320) 58.9%, rgba(0, 0, 0, 0.394) 64.3%, rgba(0, 0, 0, 0.468) 69.3%, rgba(0, 0, 0, 0.540) 74.1%, rgba(0, 0, 0, 0.607) 78.8%, rgba(0, 0, 0, 0.668) 83.6%, rgba(0, 0, 0, 0.721) 88.7%, rgba(0, 0, 0, 0.762) 94.1%, rgba(0, 0, 0, 0.790) 100%); 
+  transform: translateY(-50%); 
+  transition: transform calc(var(--d) * 2) var(--e); 
 } 
- 
-.map { 
-    width: 100%; 
-    padding: 8px; 
-    margin-bottom: 16px; 
-    box-sizing: border-box; 
-    border-radius: 15px; 
-    background-color: rgb(105, 152, 111); 
-    color: rgb(183, 213, 179); 
-    font-size: 17px; 
-    font-weight: 700; 
-    border: #a2c2ee; 
+ .photo:nth-child(1):before { 
+  background-image: url(https://images.unsplash.com/photo-1517021897933-0e0319cfbc28?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ); 
 } 
- 
-.map:hover { 
-    background-color: rgb(52, 98, 58); 
+ .photo:nth-child(2):before { 
+  background-image: url(https://images.unsplash.com/photo-1533903345306-15d1c30952de?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ); 
 } 
- 
-.map-div iframe { 
-    border: 0; 
-    padding: 10px; 
+ .photo:nth-child(3):before { 
+  background-image: url(https://images.unsplash.com/photo-1545243424-0ce743321e11?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ); 
 } 
- 
-.gfg { 
-    text-align: center; 
-    color: green; 
+ .photo:nth-child(4):before { 
+  background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ); 
 } 
- 
-.map-div { 
-    background-color: rgb(152, 178, 234); 
+.photo:nth-child(5):before { 
+ background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ); 
+} 
+.photo:nth-child(6):before { 
+ background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ); 
+} 
+.photo:nth-child(7):before { 
+ background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ); 
+} 
+.photo:nth-child(8):before { 
+ background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ); 
+} 
+ .content { 
+  position: relative; 
+  display: flex; 
+  flex-direction: column; 
+  align-items: center; 
+  width: 100%; 
+  padding: 1rem; 
+  transition: transform var(--d) var(--e); 
+  z-index: 1; 
+} 
+ .content
+ > * + * { 
+  margin-top: 1rem; 
+} 
+ .title { 
+  font-size: 1.3rem; 
+  font-weight: bold; 
+  line-height: 1.2; 
+} 
+ .copy { 
+  font-family: var(--font-serif); 
+  font-size: 1.125rem; 
+  font-style: italic; 
+  line-height: 1.35; 
+} 
+ .btn5 { 
+  cursor: pointer; 
+  margin-top: 1.5rem; 
+  padding: 0.75rem 1.5rem; 
+  font-size: 0.65rem; 
+  font-weight: bold; 
+  letter-spacing: 0.025rem; 
+  text-transform: uppercase; 
+  color: white; 
+  background-color: rgb(40, 203, 154); 
+  border: none; 
+} 
+ .btn5:hover { 
+  background-color: #0d0d0d; 
+} 
+ .btn5:focus { 
+  outline: 1px dashed yellow; 
+  outline-offset: 3px; 
+} 
+ @media (hover: hover) and (min-width: 600px) { 
+  .photo:after { 
+   transform: translateY(0); 
+ } 
+  .content { 
+   transform: translateY(calc(100% - 4.5rem)); 
+ } 
+  .content > *:not(.title) { 
+   opacity: 0; 
+   transform: translateY(1rem); 
+   transition: transform var(--d) var(--e), opacity var(--d) var(--e); 
+ } 
+  .photo:hover, .photo:focus-within { 
+   align-items: center; 
+ } 
+  .photo:hover:before, .photo:focus-within:before { 
+   transform: translateY(-4%); 
+ } 
+  .photo:hover:after, .photo:focus-within:after { 
+   transform: translateY(-50%); 
+ } 
+  .photo:hover .content, .photo:focus-within .content { 
+   transform: translateY(0); 
+ } 
+  .photo:hover .content > *:not(.title), .photo:focus-within .content > *:not(.title) { 
+   opacity: 1; 
+   transform: translateY(0); 
+   transition-delay: calc(var(--d) / 8); 
+ } 
+  .photo:focus-within:before, .photo:focus-within:after, .photo:focus-within .content, .photo:focus-within .content > *:not(.title) { 
+   transition-duration: 0s; 
+ } 
 }
