--- a/Bus/bus.css
+++ b/Bus/bus.css
@@ -8,7 +8,7 @@
 .button-container { 
   display: flex; 
   background-color: rgba(135, 206, 235); 
-  width: 100%; 
+  width: 110%; 
   height: 50px; 
   align-items: center; 
   justify-content: space-around; 
@@ -20,7 +20,7 @@
 .button { 
   outline: 0 !important; 
   border: 0 !important; 
-  width: 60px; 
+  width: 53px; 
   height: 60px; 
   border-radius: 50%; 
   margin-left: 1550%; 
@@ -137,10 +137,13 @@ width:20%;
   PADDING:15PX 10PX; 
 } 
  
- 
+ .h1{
+  font-family: "Fira Sans", sans-serif;
+  color: #4ce3f7;
+ }
  
 /* From Uiverse.io by niat786 */  
-.muna { 
+.muna{ 
   border: none; 
   color: #fff; 
   background-image: linear-gradient(30deg, #0400ff, #4ce3f7); 
@@ -351,7 +354,7 @@ inset: 0;
   height: 60%; 
   width: 80%; 
   /* border: 1px solid black; */ 
-  margin-top: +60%; 
+  margin-top: 60%; 
   margin-left: 10%; 
   margin-bottom: -35%; 
   border-radius: 20px; 
@@ -362,11 +365,14 @@ inset: 0;
   height: 87.5%; 
   width: 100%; 
   /* border: 1px solid black; */ 
-  /* margin-top: 10%; */ 
-  margin-left: 8%; 
+  margin-top: -1%; 
+  margin-left: 4%; 
   position: relative; 
    
 } 
+#puja{
+  margin-left: 8%;
+}
 .click{ 
   height: 17%; 
   width: 9%; 
@@ -912,10 +918,10 @@ form {
   transition: transform calc(var(--d) * 2) var(--e); 
 } 
  .photo:nth-child(1):before { 
-  background-image: url(https://images.unsplash.com/photo-1517021897933-0e0319cfbc28?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ); 
+  background-image: url(image/img01.jpg); 
 } 
  .photo:nth-child(2):before { 
-  background-image: url(https://images.unsplash.com/photo-1533903345306-15d1c30952de?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ); 
+  background-image: url(image/img3.jpg); 
 } 
  .photo:nth-child(3):before { 
   background-image: url(https://images.unsplash.com/photo-1545243424-0ce743321e11?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ); 
