--- a/Bus/bus.css
+++ b/Bus/bus.css
@@ -924,22 +924,22 @@ form {
   background-image: url(image/img3.jpg); 
 } 
  .photo:nth-child(3):before { 
-  background-image: url(https://images.unsplash.com/photo-1545243424-0ce743321e11?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ); 
+  background-image: url(image/img4.webp); 
 } 
  .photo:nth-child(4):before { 
-  background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ); 
+  background-image: url(image/img5.jpg); 
 } 
 .photo:nth-child(5):before { 
- background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ); 
+ background-image: url(image/img1.png); 
 } 
 .photo:nth-child(6):before { 
- background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ); 
+ background-image: url(image/image.jfif); 
 } 
 .photo:nth-child(7):before { 
- background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ); 
+ background-image: url(image/img2.jpg); 
 } 
 .photo:nth-child(8):before { 
- background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ); 
+ background-image: url(image/img2.jpg); 
 } 
  .content { 
   position: relative; 
